--- a/(模拟)番茄小说用户阅读品类偏好及留存分析&听书时长增加AB_Test.ipynb
+++ b/(模拟)番茄小说用户阅读品类偏好及留存分析&听书时长增加AB_Test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5luutUyhzC+FBw1BD7RwS",
+      "authorship_tag": "ABX9TyPH4ZR8TOvBOGWm7RhQxQav",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1.daatset：** 通过随机模拟生成\n",
+        "**1.dataset：** 通过随机模拟生成\n",
         "This dataset is generated through simulation,and here're the attributes:\n",
         "\n",
         "user_id（用户ID）\n",
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -298,7 +298,7 @@
         "id": "6LFxuEeb2r5g",
         "outputId": "8abb9580-3c8c-44f0-9d55-76fa74c0fd11"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1025,7 @@
         "id": "i-ws5LNT2xUS",
         "outputId": "6cec2a54-2684-48ad-918f-73d510e685aa"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +1052,7 @@
         "id": "p6wq8wQJ2x3S",
         "outputId": "bbd649d8-d98a-4c4a-8164-6b83c77a023a"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1464,7 +1464,7 @@
         "id": "rLSlp9zT2zpQ",
         "outputId": "b18111f5-3351-4dd3-b913-c49197591dfd"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1859,7 +1859,7 @@
         "id": "nLKP7Tfq3L28",
         "outputId": "d14ab7ef-db0d-4d66-9b34-52e089735094"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1896,7 +1896,7 @@
         },
         "outputId": "7ecda8de-42c2-4943-c8a6-045af5504368"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2269,7 +2269,7 @@
         "id": "o4iH4NiQRj-y",
         "outputId": "9dc3bea3-feb3-4add-b7a2-46b2c3db6a09"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2327,7 +2327,7 @@
         "id": "Txm5rANbR8nF",
         "outputId": "807a869d-3982-4421-a4ef-dd85d878e11c"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2789,7 +2789,7 @@
         "id": "y40bX650VFNN",
         "outputId": "a3a994ea-3321-4ab1-fb6a-3c41449d3e0e"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2910,7 +2910,7 @@
       "metadata": {
         "id": "MMLtQDUV67gm"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3017,7 +3017,7 @@
       "metadata": {
         "id": "bC9082yy7kd1"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3059,7 +3059,7 @@
         },
         "outputId": "8588f056-b1e9-4016-d54b-81ebe9339ccd"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3134,7 +3134,7 @@
         },
         "outputId": "10794900-a53e-4f81-d5ce-197ba0a8f2f4"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3538,7 +3538,7 @@
         "id": "Mh4nSFa5vG9b",
         "outputId": "32650353-f657-4194-93eb-bdacc2834d27"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3649,7 +3649,7 @@
         "id": "j5ztUWqVyIRH",
         "outputId": "646312a9-efcc-4ce8-a6a1-b0a63d3e4866"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3704,7 +3704,7 @@
         "id": "hs7Ozlr-828Z",
         "outputId": "c26bad02-9ae3-40cf-ec24-dddf7337ff41"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3723,15 +3723,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "-_3_UBpqBZSw"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
